Se agregan tema4 y 5, se corrigen errores de la version anterior, se agrega footer a la pagina, se agrega icono

--- a/tema3.html
+++ b/tema3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="icon" type="image/png" href="img/icono.jpg" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/misEstilos.css">
@@ -10,9 +11,13 @@
 <body>
 	<header>
 		<nav>
-			<ul>
-				<li><a href="index.html">Principal</a></li>
-				<li><a href="#">Contacto</a></li>
+			<ul class="right">
+				<li><a href="index.html" class="tituloNav">Principal</a></li>
+				<!--<li><a href="tema1.html">Tema 1</a></li>
+				<li><a href="tema2.html">Tema 2</a></li>
+				<li><a href="tema3.html">Tema 3</a></li>
+				<li><a href="tema4.html">Tema 4</a></li>
+				<li><a href="tema5.html">Tema 5</a></li>-->
 			</ul>
 		</nav>
 	</header>
@@ -34,6 +39,44 @@
 		</table>
 	</div>
 	<br><br>
+	<footer class="page-footer colorFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col m6 s12">
+                    <span class="titulo">¿Quiénes somos?</span>
+                    <p class="white-text">
+                        Somos un grupo de estudiantes decididos a hacer una diferencia, a no ser conformistas y siempre ir por más, teniendo siempre claros los valores y principos que nos identifican como universitarios y siempre dispuestos a ayudar, para así mejorar la sociedad en la que vivimos.
+						Siempre estamos listos para nuevos retos y en busca de aprender mas.
+                    </p>
+                </div>
+                <div class="col m6 s12">
+                    <span class="titulo">Contacto</span>
+                    <table class="white-text">
+                    	<thead>
+                    		<tr>
+                    			<th>Nombre</th>
+                    			<th>Facebok</th>
+                    		</tr>
+                    	</thead>
+                    	<tbody>
+                    		<tr>
+                    			<td>Armando Valderrama</td>
+                    			<td><a href="https://www.facebook.com/profile.php?id=100011166909164&fref=mentions&pnref=story" target="_blank" style="color: #F9DA0D"><i>Armando Valderrama</i></a></td>
+                    		</tr>
+                    		<tr>
+                    			<td>Tania Aguilera</td>
+                    			<td><a href="https://www.facebook.com/itanagro" target="_blank" style="color: #F9DA0D"><i>Tania Aguilera</i></a></td>
+                    		</tr>
+                    		<tr>
+                    			<td>Fanny Rugerio</td>
+                    			<td><a href="https://www.facebook.com/fanny.rugerio?ref=br_rs" target="_blank" style="color: #F9DA0D"><i>Fanny Rugerio</i></a></td>
+                    		</tr>
+                    	</tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </footer>
 	<script src="js/librosYReferenciasTema3.js"></script>	
 	<script type="text/javascript" src="js/agregaLibros.js"></script>
 </body>
