Se añaden contenidos a tema1, tema2 y tema3

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<div id="tablaPrincipal" class="row">
 		</div>
 	</div>
-	<script src="js/temasSubtemasLibros.js"></script>
+	<br><br>
+	<script src="js/temasSubtemasImagenes.js"></script>
 	<script src="js/generacionPagina.js"></script>
 </body>
 </html>
