--- a/contacto.html
+++ b/contacto.html
@@ -16,8 +16,12 @@
 			</ul>
 		</nav>
 	</header>
-	<div>
-		
+	<div class="row">
+		<div class="col s12">
+			<div class="card">
+				
+			</div>
+		</div>
 	</div>
 </body>
 </html>
