--- a/tema1.html
+++ b/tema1.html
@@ -5,19 +5,36 @@
 	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/misEstilos.css">
 	<meta charset="UTF-8">
-	<title>Contacto</title>
+	<title>Tema 1</title>
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
 				<li><a href="index.html">Principal</a></li>
-				<li><a href="#">Contacto</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
-	<div>
-		
+	<br>
+	<br>
+	<br>
+	<div class="container">
+		<table>
+			<thead>
+				<tr>
+					<th id="colu">Libro recomendado.</th>
+					<th>Ubicacion en biblioteca UNAM.</th>
+					<th>Numero de Clasificación.</th>
+					<!--<th>Libro en linea.</th>-->
+				</tr>
+			</thead>
+			<tbody id="tabla">
+			</tbody>
+		</table>
 	</div>
+	<br><br>
+	<script src="js/librosYReferenciasTema1.js"></script>	
+	<script type="text/javascript" src="js/agregaLibros.js"></script>
 </body>
 </html>
