--- a/tema2.html
+++ b/tema2.html
@@ -16,8 +16,24 @@
 			</ul>
 		</nav>
 	</header>
-	<div>
-		
+	<br>
+	<br>
+	<br>
+	<div class="container">
+		<table>
+			<thead>
+				<tr>
+					<th id="colu">Libro recomendado.</th>
+					<th>Ubicacion en biblioteca UNAM.</th>
+					<th>Numero de Clasificación.</th>
+					<!--<th>Libro en linea.</th>-->
+				</tr>
+			</thead>
+			<tbody id="tabla">
+			</tbody>
+		</table>
 	</div>
+	<script src="js/librosYReferenciasTema2.js"></script>	
+	<script type="text/javascript" src="js/agregaLibros.js"></script>
 </body>
 </html>
